--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+    <h1>Main Title</h1>
+
+    <section class="container">
+        <h2 class="question">Question</h2>
+        <img src="" alt="" />
+        <ul class="answers"></ul>
+    </section>
 
 </body>
 
