Displaying answer on timeout now works

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
 <body>
     <h1>Main Title</h1>
 
-    <section class="container">
-        <h2 class="question">Question</h2>
-        <img src="" alt="" />
-        <ul class="answers"></ul>
-    </section>
+    <div class="container">
+        <section class="question-box">
+            <h2 class="question">Question</h2>
+
+            <ul class="answers"></ul>
+        </section>
+        <section class="result-box">
+            <h2 class="result">Result</h2>
+            <p class="correct">Correct answer</p>
+            <img src="" alt="" />
+        </section>
+    </div>
 
     <section class="timer-box">
         <p id="timer"></p>
