Further work on game loop

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
             <ul class="answers"></ul>
         </section>
         <section class="result-box">
-            <h2 class="result">Result</h2>
-            <p class="correct">Correct answer</p>
+            <h2 id="result">Result</h2>
+            <p>The correct answer is: <span id="correct">Correct answer</span></p>
             <img src="" alt="" />
+        </section>
+        <section class="final-result-box">
+            <h2>That's it!</h2>
+            <p>Correct answers: <span id="total-correct">0</span></p>
+            <p>Incorrect answers: <span id="total-incorrect">0</span></p>
+            <p>Unanswered: <span id="total-skipped">0</span></p>
         </section>
     </div>
 
