Game logic is working great! Time to move on to content

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <p>Correct answers: <span id="total-correct">0</span></p>
             <p>Incorrect answers: <span id="total-incorrect">0</span></p>
             <p>Unanswered: <span id="total-skipped">0</span></p>
+            <br />
+            <button id="restart">Play again?</button>
         </section>
     </div>
 
