Added .hidden class, some comments

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
             <ul class="answers"></ul>
         </section>
-        <section class="result-box">
+        <section class="result-box hidden">
             <h2 id="result">Result</h2>
             <p>The correct answer is: <span id="correct">Correct answer</span></p>
             <img src="" alt="" />
         </section>
-        <section class="final-result-box">
+        <section class="final-result-box hidden">
             <h2>That's it!</h2>
             <p>Correct answers: <span id="total-correct">0</span></p>
             <p>Incorrect answers: <span id="total-incorrect">0</span></p>
