Added images and relevant code

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
     <header>
         <hr />
-        
+
         <h1>Worldly Written Words</h1>
-        
+
         <hr />
     </header>
     <div class="container">
@@ -32,8 +32,9 @@
         <section class="result-box hidden">
             <h2 id="result">Result</h2>
             <hr />
+            <img id="result-img" src="" alt=""/>
             <p>The correct answer is: <span id="correct">Correct answer</span></p>
-            <img src="" alt="" />
+
         </section>
         <section class="final-result-box hidden">
             <h2>That's it!</h2>
@@ -49,6 +50,19 @@
     <section class="timer-box">
         <p id="timer"></p>
     </section>
+
+    <footer>
+        <p>Created by Aretha S.H. Walls | November 2018</p>
+        <p>Image Credits:
+            <a href="https://commons.wikimedia.org/wiki/File:Hangul_advertisement.jpg" target="_blank">Hangul</a> | 
+            <a href="https://commons.wikimedia.org/wiki/File:Ala%C5%9Fehir_Church_of_St._John_tombstone_2.jpg" target="_blank">Greek</a> | 
+            <a href="https://commons.wikimedia.org/wiki/File:Javakhian_Dialect_of_Georgian_Language,_Gr._Beridze,_Tbilisi,_1988.jpg" target="_blank">Georgian</a> | 
+            <a href="https://commons.wikimedia.org/wiki/File:Shakhari_Bazar_in_Dhaka.jpg" target="_blank">Bengali</a> | 
+            <a href="https://commons.wikimedia.org/wiki/File:Learning_Arabic_calligraphy_(Kaf).jpg" target="_blank">Arabic</a> | 
+            <a href="https://commons.wikimedia.org/wiki/File:Amz_spot_chamo_djusse.jpg" target="_blank">Tifinagh</a>
+        </p>
+        <p>All other images within Public Domain.</p>
+    </footer>
 
 </body>
 
