Raised timelimit back up to 30

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         </section>
         <section class="final-result-box hidden">
-            <h2>That's it!</h2>
+            <h2>That's alll we wrote!</h2>
             <hr />
             <p>Correct answers: <span id="total-correct">0</span></p>
             <p>Incorrect answers: <span id="total-incorrect">0</span></p>
