Fixed sticky footer

--- a/index.html
+++ b/index.html
@@ -17,49 +17,54 @@
 </head>
 
 <body>
-    <header>
-        <hr />
-
-        <h1>Worldly Written Words</h1>
-
-        <hr />
-    </header>
-    <div class="container">
-        <section class="question-box">
-            <h2 class="question">Question</h2>
+    <div class="main-content">
+        <header>
             <hr />
-            <ul class="answers"></ul>
-        </section>
-        <section class="result-box hidden">
-            <h2 id="result">Result</h2>
-            <hr />
-            <img id="result-img" src="" alt=""/>
-            <p>The correct answer is: <span id="correct">Correct answer</span></p>
 
-        </section>
-        <section class="final-result-box hidden">
-            <h2>That's alll we wrote!</h2>
+            <h1>Worldly Written Words</h1>
+
             <hr />
-            <p>Correct answers: <span id="total-correct">0</span></p>
-            <p>Incorrect answers: <span id="total-incorrect">0</span></p>
-            <p>Unanswered: <span id="total-skipped">0</span></p>
-            <br />
-            <button id="restart">Play again?</button>
+        </header>
+
+        <div class="container">
+            <section class="question-box">
+                <h2 class="question">Question</h2>
+                <hr />
+                <ul class="answers"></ul>
+            </section>
+            <section class="result-box hidden">
+                <h2 id="result">Result</h2>
+                <hr />
+                <img id="result-img" src="" alt="" />
+                <p>The correct answer is: <span id="correct">Correct answer</span></p>
+
+            </section>
+            <section class="final-result-box hidden">
+                <h2>That's alll we wrote!</h2>
+                <hr />
+                <p>Correct answers: <span id="total-correct">0</span></p>
+                <p>Incorrect answers: <span id="total-incorrect">0</span></p>
+                <p>Unanswered: <span id="total-skipped">0</span></p>
+                <br />
+                <button id="restart">Play again?</button>
+            </section>
+        </div>
+
+        <section class="timer-box">
+            <p id="timer"></p>
         </section>
     </div>
-
-    <section class="timer-box">
-        <p id="timer"></p>
-    </section>
-
     <footer>
         <p>Created by Aretha S.H. Walls | November 2018</p>
         <p>Image Credits:
-            <a href="https://commons.wikimedia.org/wiki/File:Hangul_advertisement.jpg" target="_blank">Hangul</a> | 
-            <a href="https://commons.wikimedia.org/wiki/File:Ala%C5%9Fehir_Church_of_St._John_tombstone_2.jpg" target="_blank">Greek</a> | 
-            <a href="https://commons.wikimedia.org/wiki/File:Javakhian_Dialect_of_Georgian_Language,_Gr._Beridze,_Tbilisi,_1988.jpg" target="_blank">Georgian</a> | 
-            <a href="https://commons.wikimedia.org/wiki/File:Shakhari_Bazar_in_Dhaka.jpg" target="_blank">Bengali</a> | 
-            <a href="https://commons.wikimedia.org/wiki/File:Learning_Arabic_calligraphy_(Kaf).jpg" target="_blank">Arabic</a> | 
+            <a href="https://commons.wikimedia.org/wiki/File:Hangul_advertisement.jpg" target="_blank">Hangul</a> |
+            <a href="https://commons.wikimedia.org/wiki/File:Ala%C5%9Fehir_Church_of_St._John_tombstone_2.jpg" target="_blank">Greek</a>
+            |
+            <a href="https://commons.wikimedia.org/wiki/File:Javakhian_Dialect_of_Georgian_Language,_Gr._Beridze,_Tbilisi,_1988.jpg"
+                target="_blank">Georgian</a> |
+            <a href="https://commons.wikimedia.org/wiki/File:Shakhari_Bazar_in_Dhaka.jpg" target="_blank">Bengali</a> |
+            <a href="https://commons.wikimedia.org/wiki/File:Learning_Arabic_calligraphy_(Kaf).jpg" target="_blank">Arabic</a>
+            |
             <a href="https://commons.wikimedia.org/wiki/File:Amz_spot_chamo_djusse.jpg" target="_blank">Tifinagh</a>
         </p>
         <p>All other images within Public Domain.</p>
